Half fix for the layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,8 @@
     }
 
     .group {
-        padding-left: 12px;
+        font-size: 15px;
+        margin-top: 8px;
         display: flex;
         align-items: center;
         height: 100%;
@@ -25,6 +26,9 @@
     }
 
     .group {
+        font-size: 13px;
+        margin-top: 8px;
+        margin-right: 2px;
         width: 100px;
         display: flex;
         align-items: center;
@@ -39,7 +43,7 @@
 }
 
 .item-dates {
-    color: rgb(204, 204, 204);
+    color: rgb(198, 198, 198);
     opacity: 0;
     transition: opacity 0.3s ease-in-out;
 }
